Update stock portfolio app code