@@ -1,16 +1,19 @@
 package com.example.stockPortfolio.MarketManagement;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
+import org.springframework.cache.annotation.Cacheable;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class NewsApiService {
 
     @Value("${news.api.key}")
@@ -19,11 +22,10 @@ public class NewsApiService {
     @Value("${news.api.base-url}")
     private String baseUrl;
 
-    @Autowired
-    private FinnhubService finnhubService;
+    private final FinnhubService finnhubService;
+    private final RestTemplate restTemplate;
 
-    private final RestTemplate restTemplate = new RestTemplate();
-
+    @Cacheable(value = "marketNews", key = "#query", unless = "#result == null || #result.isEmpty()")
     public List<Map<String, Object>> getStockNews(String query) {
         // Step 1: Try NewsAPI (Primary)
         try {
@@ -46,24 +48,35 @@ public class NewsApiService {
                         simplified.put("source", ((Map<String, Object>)a.get("source")).get("name"));
                         simplified.put("datetime", a.get("publishedAt"));
                         simplified.put("url", a.get("url"));
+                        // Determine sentiment from headline for UX
+                        String h = ((String)a.get("title")).toLowerCase();
+                        simplified.put("isRisk", h.contains("fall") || h.contains("drop") || h.contains("crash") || h.contains("loss"));
+                        simplified.put("isOpportunity", h.contains("gain") || h.contains("surge") || h.contains("rise") || h.contains("profit"));
                         return simplified;
-                    }).toList();
+                    }).collect(Collectors.toList());
                 }
             }
         } catch (Exception e) {
             log.warn("NewsAPI failed for {}: {}. Switching to fallback.", query, e.getMessage());
         }
 
-        // Step 2: Try Finnhub (Fallback - Real Data)
+        // Step 2: Try Finnhub (Fallback)
         try {
-            log.info("Fetching Finnhub news for fallback: {}", query);
-            // If query looks like a symbol, use it directly, else default to 'AAPL' or similar for general market
             String symbol = (query.length() <= 5 && query.matches("[A-Z]+")) ? query : "AAPL";
             return finnhubService.getCompanyNews(symbol);
         } catch (Exception e) {
             log.error("Finnhub Fallback also failed: {}", e.getMessage());
-            // NO FAKE DATA
-            throw new RuntimeException("All news sources currently unavailable. " + e.getMessage());
+            return Collections.emptyList();
         }
+    }
+
+    public List<Map<String, Object>> getPortfolioNews(List<String> symbols) {
+        if (symbols == null || symbols.isEmpty()) {
+            return getStockNews("stock market");
+        }
+        
+        // Take top 3 symbols to avoid rate limits
+        String query = symbols.stream().limit(3).collect(Collectors.joining(" OR "));
+        return getStockNews(query);
     }
 }
